# r-knit

./: .env-sample  .gitignore  .graphqlconfig.yml  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
src/github/: mod.rs  pull_requests.rs
src/github/pull_requests/: merged_prs.rs  mod.rs  oldest_pr.rs
src/queries/: merged_prs.graphql  oldest_pr.graphql  pull_request.graphql  repository.graphql
