[package]
name = "github-stats"
version = "0.1.0"
authors = ["Simon Prochazka <simon@fallion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "github"
path = "src/github/lib.rs"

[dependencies]
graphql_client = "0.8.0"
serde = "^1.0"
reqwest = "^0.9"
prettytable-rs = "^0.7"
structopt = "^0.3"
dotenv = "^0.13"
envy = "^0.3"
log = "^0.4"
env_logger = "^0.5"
failure = "*"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
statistical = "1.0.0"